# enx-cli

./: .gitignore  Cargo.toml  README.md  enx.toml  install.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: Gemfile  _config.yml  index.md  installation.md  quick-start.md  shell-integration.md
docs/_includes/: head_custom.html  nav_footer_custom.html
docs/_sass/color_schemes/: catppuccin.scss
docs/_sass/custom/: custom.scss
docs/commands/: cd.md  clone.md  doctor.md  down.md  env.md  index.md  init.md  open.md  projects.md  remove.md  run.md  setup.md  start.md  status.md  stop.md  up.md
docs/configuration/: global.md  index.md  project.md  registry.md
scripts/: install.ps1  install.sh
src/: cli.rs  main.rs  output.rs  shell.rs
src/commands/: cd.rs  clone.rs  down.rs  env.rs  init.rs  mod.rs  open.rs  projects.rs  remove.rs  run.rs  setup.rs  shell_init.rs  start.rs  up.rs
src/config/: global.rs  mod.rs  project.rs  registry.rs
src/util/: mod.rs
