[package]
name = "enx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
colored = "3.1.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
dotenv = "0.15.0"
same-file = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.4"

[dev-dependencies]
tempfile = "3.26.0"
